# nix-home

./: CLAUDE.md  README.md  ai-plan.md  configuration.nix  de-googling.md  fix-remaining-modules.sh  fix-user-modules.sh  flake.nix  test-gaming-user.sh
.claude/: settings.json
.claude/hooks/: spec-reminder.sh
audiomenu/: .gitignore  Cargo.toml  EMOJI-FEATURE.md  PROGRESS.md  README.md  STREAM-MOVING-FIX.md  SUMMARY.md  TEST-INTERACTIVE.md  TESTING.md  flake.nix  test-list.sh
audiomenu/examples/: list_devices.rs  test_emoji_parsing.rs  test_full_flow.rs  test_launcher.rs
audiomenu/src/: lib.rs  main.rs
audiomenu/src/backend/: mod.rs  pipewire.rs
audiomenu/src/cli/: mod.rs
audiomenu/src/launcher/: mod.rs
hosts/bits/: SPEC.md  configuration.nix  default.nix  system.nix  user-birgerrydback.nix
hosts/controller/: SPEC.md  default.nix  system.nix  user-betongsuggan.nix
hosts/desktop/: SPEC.md  system.nix  user-gamer.nix
hosts/island-stationary/: SPEC.md  default.nix  system.nix  user-betongsuggan.nix  user-gamer.nix
hosts/mail/: SPEC.md  default.nix  hardware.nix  system.nix  terraform.nix
hosts/private-desktop/: SPEC.md  default.nix  system.nix  user-betongsuggan.nix  user-gamer.nix  users.nix
hosts/private-laptop/: SPEC.md  configuration.nix  default.nix  system.nix  user-betongsuggan.nix
lib/: default.nix  host.nix  user.nix
modules/: system.nix  user.nix
modules/ai-server/: SPEC.md  default.nix
modules/audio/: SPEC.md  default.nix
modules/autologin/: SPEC.md  default.nix
overrides/: aws-cdk.nix  niri.nix
pkgs/: vicinae-extensions.nix
(+345 files in other folders)
