[package]
name = "audiomenu"
version = "0.1.0"
edition = "2021"
authors = ["audiomenu contributors"]
description = "Launcher-driven audio device manager for Linux"
license = "GPL-3.0"
repository = "https://github.com/yourusername/audiomenu"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
